# Particles

./: .gitignore  CMakeLists.txt  README.md  orbits.sh  output.txt  stromer.plot  univers.sh
backup/: particule.cxx  particule.hxx  simulation.cxx  test_creation.cxx
bak/: particule.cxx  particule.hxx  univers.hxx  vector.hxx
demo/: CMakeLists.txt  orbits.cxx  univers.cxx  univers2D.cxx  univers3D.cxx
include/: grid.hxx  ndgrid.hxx  particle.hxx  univers.hxx  vector.hxx
scripts/: orbits.sh  univers2D.sh  univers3D.sh
simulation_files/: stromer2D.plot  stromer3D.plot
src/: CMakeLists.txt  particle.cxx  vector.cxx
test/: CMakeLists.txt  testGrid.cxx  testVec.cxx
